--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine On
-RewriteCond %{HTTP_HOST} !^www.main180.tk$ [NC]
+RewriteCond %{HTTP_HOST} ^main180.tk [NC]
 RewriteRule ^(.*)$ http://www.main180.tk/$1 [L,R=301]
